python_scripts/logs/flashpoint_Bit_morgan_model_comaparison_2.log
nohup: ignoring input
  File "/home/cat/descriptors/python_scripts/compare_models.py", line 88
    wrapped_title = "\n".join(textwrap.wrap(f"{config.property}_{spaceless_opt_name}_Residuals_vs_Predictions")
                             ^
SyntaxError: '(' was never closed
